deploy: ccce9b532f953f5cb487c4b8fe182d6741adbcc8

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -22278,77 +22278,6 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestBlackrock.RewardDescription
   nameWithType: QuestBlackrock.RewardDescription
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen
-  name: QuestDarkPortalOpen
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html
-  commentId: T:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen
-  nameWithType: QuestDarkPortalOpen
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.#ctor(unit,unit,unit,unit,unit,unit,unit)
-  name: QuestDarkPortalOpen(unit, unit, unit, unit, unit, unit, unit)
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen__ctor_unit_unit_unit_unit_unit_unit_unit_
-  commentId: M:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.#ctor(unit,unit,unit,unit,unit,unit,unit)
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.QuestDarkPortalOpen(unit, unit, unit, unit, unit, unit, unit)
-  nameWithType: QuestDarkPortalOpen.QuestDarkPortalOpen(unit, unit, unit, unit, unit, unit, unit)
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.#ctor*
-  name: QuestDarkPortalOpen
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen__ctor_
-  commentId: Overload:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.#ctor
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.QuestDarkPortalOpen
-  nameWithType: QuestDarkPortalOpen.QuestDarkPortalOpen
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.CompletionPopup
-  name: CompletionPopup
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_CompletionPopup
-  commentId: P:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.CompletionPopup
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.CompletionPopup
-  nameWithType: QuestDarkPortalOpen.CompletionPopup
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.CompletionPopup*
-  name: CompletionPopup
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_CompletionPopup_
-  commentId: Overload:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.CompletionPopup
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.CompletionPopup
-  nameWithType: QuestDarkPortalOpen.CompletionPopup
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnComplete(MacroTools.FactionSystem.Faction)
-  name: OnComplete(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_OnComplete_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnComplete(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnComplete(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestDarkPortalOpen.OnComplete(Faction)
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnComplete*
-  name: OnComplete
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_OnComplete_
-  commentId: Overload:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnComplete
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnComplete
-  nameWithType: QuestDarkPortalOpen.OnComplete
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnFail(MacroTools.FactionSystem.Faction)
-  name: OnFail(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_OnFail_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnFail(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnFail(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestDarkPortalOpen.OnFail(Faction)
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnFail*
-  name: OnFail
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_OnFail_
-  commentId: Overload:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnFail
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.OnFail
-  nameWithType: QuestDarkPortalOpen.OnFail
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.RewardDescription
-  name: RewardDescription
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_RewardDescription
-  commentId: P:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.RewardDescription
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.RewardDescription
-  nameWithType: QuestDarkPortalOpen.RewardDescription
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.RewardDescription*
-  name: RewardDescription
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestDarkPortalOpen_RewardDescription_
-  commentId: Overload:WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.RewardDescription
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestDarkPortalOpen.RewardDescription
-  nameWithType: QuestDarkPortalOpen.RewardDescription
 - uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestFelHordeKillIronforge
   name: QuestFelHordeKillIronforge
   href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestFelHordeKillIronforge.html
@@ -22516,15 +22445,12 @@ references:
   commentId: T:WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel
   fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel
   nameWithType: QuestHellfireCitadel
-- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.#ctor(Rectangle,List{unit})
-  name: QuestHellfireCitadel(Rectangle, List<unit>)
-  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestHellfireCitadel__ctor_Rectangle_List_unit__
-  commentId: M:WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.#ctor(Rectangle,List{unit})
-  name.vb: QuestHellfireCitadel(Rectangle, List(Of unit))
-  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.QuestHellfireCitadel(Rectangle, List<unit>)
-  fullName.vb: WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.QuestHellfireCitadel(Rectangle, List(Of unit))
-  nameWithType: QuestHellfireCitadel.QuestHellfireCitadel(Rectangle, List<unit>)
-  nameWithType.vb: QuestHellfireCitadel.QuestHellfireCitadel(Rectangle, List(Of unit))
+- uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.#ctor(Rectangle)
+  name: QuestHellfireCitadel(Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestHellfireCitadel__ctor_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.#ctor(Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.QuestHellfireCitadel(Rectangle)
+  nameWithType: QuestHellfireCitadel.QuestHellfireCitadel(Rectangle)
 - uid: WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.#ctor*
   name: QuestHellfireCitadel
   href: api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.html#WarcraftLegacies_Source_Quests_Fel_Horde_QuestHellfireCitadel__ctor_
