--- a/manifest.json
+++ b/manifest.json
@@ -5373,7 +5373,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Quests.Fel_Horde.QuestHellfireCitadel.html",
-          "hash": "OCPK0ddYLJTfDiJqdikZng=="
+          "hash": "WTKF18057GwSCUBbJmduUQ=="
         }
       },
       "is_incremental": false,
@@ -8501,6 +8501,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-source/WarcraftLegacies.Source.Setup.SharedFactionConfigSetup.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-source/WarcraftLegacies.Source.Setup.SharedFactionConfigSetup.html",
+          "hash": "zH3EE/Lo1uQybOuK2iv5Cg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-source/WarcraftLegacies.Source.Setup.ShoreSetup.yml",
       "output": {
         ".html": {
@@ -8733,7 +8745,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Setup.html",
-          "hash": "QqUuhQ7WN/UsZ32aw87adQ=="
+          "hash": "BHfvWtfFhCqflsBsJr+nwA=="
         }
       },
       "is_incremental": false,
@@ -8829,7 +8841,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/toc.html",
-          "hash": "WnhB/LtEO+a+7BtH0aA73g=="
+          "hash": "5fOOXdJn9zh7xtYIELtpug=="
         }
       },
       "is_incremental": false,
@@ -8904,7 +8916,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 734,
+          "total_file_count": 735,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
